--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuepress/client": "2.0.0-rc.0",
     "vue": "^3.4.15",
     "vuepress": "2.0.0-rc.0",
+    "vuepress-plugin-search-pro": "2.0.0-rc.16",
     "vuepress-theme-hope": "2.0.0-rc.13"
   }
 }
