--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vuepress/client": "2.0.0-rc.0",
     "vue": "^3.4.15",
     "vuepress": "2.0.0-rc.0",
-    "vuepress-plugin-search-pro": "2.0.0-rc.16",
+    "vuepress-plugin-comment2": "2.0.0-rc.16",
+    "vuepress-plugin-search-pro": "^2.0.0-beta.206",
     "vuepress-theme-hope": "2.0.0-rc.13"
   }
 }
