--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-rc.0",
+    "@waline/client": "3.0.0-alpha.11",
     "vue": "^3.4.15",
     "vuepress": "2.0.0-rc.0",
     "vuepress-plugin-comment2": "2.0.0-rc.16",
-    "vuepress-plugin-search-pro": "^2.0.0-beta.206",
+    "vuepress-plugin-search-pro": "2.0.0-rc.16",
     "vuepress-theme-hope": "2.0.0-rc.13"
   }
 }
